# kafkit

./: .flake8  .pre-commit-config.yaml  .prettierignore  .travis.yml  CHANGELOG.md  CHANGELOG.rst  LICENSE  Makefile  README.md  README.rst  docker-compose.yaml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yaml  dependencies.yaml  periodic-ci.yaml
changelog.d/: 20230613_123447_jsick_DM_39648.md  20230717_125707_jsick_DM_39646.md  20230718_175341_jsick_ruff.md  20250512_171751_jsick_DM_50831.md
docs/: Makefile  _rst_epilog.rst  api.rst  conf.py  documenteer.toml  index.rst  recordnameschemamanager-howto.rst  strimzi-ssl-howto.rst
docs/dev/: development.rst  index.rst  release.rst
docs/guide/: index.rst
kafkit/: httputils.py
kafkit/registry/: aiohttp.py  sansio.py  serializer.py
src/kafkit/: __init__.py  httputils.py  settings.py  ssl.py
src/kafkit/fastapi/: __init__.py
src/kafkit/fastapi/dependencies/: __init__.py  aiokafkaproducer.py  pydanticschemamanager.py  registryapi.py
src/kafkit/registry/: __init__.py  aiohttp.py  errors.py  httpx.py  manager.py  sansio.py  serializer.py  utils.py
src/kafkit/registry/manager/: __init__.py  _pydantic.py  _recordname.py
tests/: __init__.py  httputils_test.py  pydantic_schema_manager_test.py  registry_httpx_test.py  registry_manager_test.py  registry_sansio_test.py  registry_serializer_test.py  ssl_test.py  test_httputils.py  test_registry_sansio.py  test_registry_serializer.py
tests/data/record_name_schemas/: kafkit.a.json  kafkit.b.json
tests/data/ssl/: client.ca.crt  client.crt  client.key  cluster.ca.crt
