[metadata]
name = kafkit
description = Kafkit helps you write Kafka producers and consumers in Python with asyncio.
author = Association of Universities for Research in Astronomy, Inc. (AURA)
author_email = sqre-admin@lists.lsst.org
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
url = https://kafkit.lsst.io
project_urls =
    Change log = https://kafkit.lsst.io/changelog.html
    Source code = https://github.com/lsst-sqre/kafkit
    Issue tracker = https://github.com/lsst-sqre/kafkit/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Framework :: AsyncIO
    Intended Audience :: Developers
    Natural Language :: English
    Operating System :: POSIX
keywords =
    lsst
    kafka

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires =
    importlib_metadata; python_version < "3.8"
    uritemplate
    fastavro

[options.packages.find]
where = src

[options.extras_require]
aiohttp =
    aiohttp
dev =
    # Testing
    pytest==5.3.5
    pytest-asyncio==0.10.0
    coverage[toml]==5.0.3
    pre-commit
    flake8==3.7.9
    mypy==0.761
    # Documentation
    documenteer>=0.5,<0.6
    lsst-sphinx-bootstrap-theme<0.3
    sphinx-prompt
    sphinx-automodapi==0.12
    holdup

[flake8]
max-line-length = 79
# Ignored rules for Black
# E203 whitespace before ':'
# W503: line break before binary operator
ignore = E203 W503
exclude =
    docs/conf.py

[mypy]
disallow_untyped_defs = True
disallow_incomplete_defs = True
ignore_missing_imports = True
strict_equality = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_ignores = True
